--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&family=Lexend+Deca:wght@100;200;300;400;500;600;700&family=Montserrat:wght@400;700&family=Mulish:wght@300&family=Poppins:wght@300;400;600&family=Urbanist:wght@300;400;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
   margin: 0;
@@ -24,6 +24,17 @@
 .navbar {
   background: transparent; /* Make the navbar transparent to show the background image */
   color: #ffffff; /* Text color for the navbar */
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  display: block;
+  text-decoration: none;
+  display: block;
+  padding: 5px 10px;
+  text-decoration: none;
+  font-size: 1em;
+  line-height: 37px;
+  text-shadow: 0px -1px 0px #284c6e;
+
 }
 
 /* Banner styles */
