--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  max-width: 60% !important;
+  max-width: 50% !important;
 }
 
 /* Container for navbar and banner */
@@ -34,7 +34,20 @@
   font-size: 1em;
   line-height: 37px;
   text-shadow: 0px -1px 0px #284c6e;
+  position: absolute;
+    top: 30px;
+    right: 10px;
 
+}
+
+.nav-item {
+  float: left;
+    display: block;
+    position: relative;
+    z-index: 500;
+    margin: 0px;
+    line-height: 46px;
+    padding: 0px 5px 0px 5px;
 }
 
 /* Banner styles */
