change background image smootlhy

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 * {
   margin: 0;
@@ -8,59 +8,64 @@
 }
 
 .container {
-  max-width: 51% !important;
-  margin: 0 0 0 0;
-  padding: 0 0 0 0;
+  max-width: 55% !important;
 }
 
-/* Container for navbar and banner */
 .navbar-banner-container {
-  background-image: url("../images/home/slider-paint.jpg"); 
+  position: relative;
+  background-image: url("../images/home/BootstrapsImages/HomePage/content-wrapper.jpg");
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
-  transition: background-image 2s ease-in-out;
+  height: 370px;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
-/* Navbar styles */
+.altairtech_group {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/home/slider-paint.jpg");
+  margin: 0;
+  padding: 0;
+}
+
 .navbar {
-  background: transparent; /* Make the navbar transparent to show the background image */
-  color: #ffffff; /* Text color for the navbar */
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  display: block;
-  text-decoration: none;
-  display: block;
+  background: transparent;
+  color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 390;
   padding: 5px 10px;
-  text-decoration: none;
   font-size: 1em;
   line-height: 37px;
   text-shadow: 0px -1px 0px #284c6e;
   position: absolute;
-    top: 30px;
-    right: 10px;
-
+  top: 5px;
+  right: 10px;
+  z-index: 2;
 }
 
+/* Additional styles for nav items, banner, etc. */
 .nav-item {
   float: left;
-    display: block;
-    position: relative;
-    z-index: 500;
-    margin: 0px;
-    line-height: 46px;
-    padding: 0px 5px 0px 5px;
+  display: block;
+  position: relative;
+  z-index: 2; /* Ensure nav items are above the overlay */
+  margin: 0px;
+  line-height: 46px;
+  padding: 0px 5px 0px 5px;
 }
 
-
-/* Banner styles */
 .banner {
-  height: 250px; /* Height of the banner */
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   text-align: center;
+  z-index: 2; /* Ensure the banner content is above the overlay */
 }
 
 .banner h1 {
@@ -75,41 +80,39 @@
 .banner .btn {
   margin-top: 20px;
 }
-
-/* Banner styles */
-.banner {
-  padding: 60px 0;
+.altairtech_content {
+  transition: opacity 1s ease-in-out;
+  opacity: 1;
 }
 
-.banner-content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
+.altairtech_content.fade-out {
+  opacity: 0;
+}
+.fade-out {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+.fade-out {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
-.banner-text {
-  flex: 1;
-  width: 40px;
+.altairtech_group {
+  transition: background-image 1s ease-in-out; /* Smooth background transition */
 }
 
-.banner-text h1 {
-  font-size: 30px;
-  font-weight: 400;
-  padding: 10px;
-  width: 370px;
+.circle {
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: #377bb0;
+  transition: background-color 0.5s ease-in-out;
 }
 
-.banner-text p {
-  font-size: 13px;
-  width: 470px;
-  letter-spacing: 0.5px;
-  padding: 10px;
+.highlighted {
+  background-color: #45a8e3;
 }
 
 .footer__css {
   background-color: #1f1f1f;
 }
-
-
