--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
   max-width: 58% !important;
 }
 
+.elevation-4 {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
 .navbar-banner-container {
   position: relative;
   background-image: url("../images/home/BootstrapsImages/HomePage/content-wrapper.jpg");
