--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,14 @@
   background-color: #377bb0;
   transition: background-color 0.5s ease-in-out;
 }
+.circle_slider {
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: #377bb0;
+  transition: background-color 0.5s ease-in-out;
+}
+
 
 .highlighted {
   background-color: #45a8e3;
