--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: #284c6e;
+  background-color: #d3d3d3;
   transition: background-color 0.5s ease-in-out;
 }
 
