--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -28,34 +28,16 @@
   height: 700px;
   margin: auto;
 }
-@media (max-width: 1200px) {
-  .navbar-globe-container {
-    height: 60vh; 
-    width: 500px;
-  }
-}
-@media (max-width: 992px) {
-  .navbar-globe-container {
-    height: 50vh; 
-     
-  }
-}
 
+/* Adjust for mobile screens */
 @media (max-width: 768px) {
   .navbar-globe-container {
-    height: 40vh; 
-    width: 500px;
-
+    width: 100%;
+    height: auto;
+    background-position: center;
   }
 }
 
-@media (max-width: 576px) {
-  .navbar-globe-container {
-    width: 500px;
-
-    height: 30vh; /* Further adjust height for very small screens */
-  }
-}
 .globe__css {
   background-color: #1f1f1f;
   padding-top: 40px;
