--- a/css/service.css
+++ b/css/service.css
@@ -44,6 +44,14 @@
 .content_para{
     margin-top: 20px;
 }
+@media (max-width: 767px) {
+  /* Mobile-specific adjustments */
+
+  .container {
+    max-width: 100% !important;
+   
+  }
+}
 .content_para h4 {
   font-size: 16px;
   color: #0066cc;
